# agenthaus-marketplace

./: .env.example  .github-settings-recommendations.md  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  SECURITY.md  run_checks.sh  scrub_history.sh  skills_index.json  technical_debt_register.md  verify_share_button.py
.Jules/: palette.md
.agent/memory-bank/: api-contracts.md  architecture.md  decision-log.md
.agent/rules/: code-quality.md  context-management.md  marketplace.md  plugin-development.md  security.md  testing.md  web-development.md
.agent/workflows/: codebase-onboarding.md  create-plugin.md  qa-browser-test.md  validate-and-publish.md
.claude/: settings.local.json
.claude-plugin/: marketplace.json
.github/: copilot-instructions.md
.github/workflows/: validate.yml
.jules/: bolt.md  sentinel.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  (+1 more)
agenthaus-web/: next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
docs/: agent-identity.md
plugins/apple-workflows/mcp/: pyproject.toml
plugins/apple-workflows/mcp/src/apple_productivity_mcp/: server.py
reports/: README.md  SECURITY_SCAN_2026-02-06.md  TEST_COVERAGE_ANALYSIS_2026-03-20.md
schemas/: plugin.schema.json
scripts/: generate-cross-platform.js  generate-skills-index.sh  install-plugins.sh  validate-plugins.sh  verify_a11y.py
tests/: generate-cross-platform.test.js
(+498 files in other folders)
